--- a/index.css
+++ b/index.css
@@ -1,97 +1,106 @@
-*, *::after, *::before {
-    box-sizing: border-box;
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
 }
 
 body {
-    padding: 0;
-    margin: 0;
+	padding: 0;
+	margin: 0;
 }
 
 /* header */
 
 header,
 .action-btns {
-    display: flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 header {
-    justify-content: space-between;
-    padding: 0.625em;
+	justify-content: space-between;
+	padding: 0.625em;
 }
 
 header > img {
-    max-height: 30px;
-    object-fit: contain;
+	max-height: 30px;
+	object-fit: contain;
+}
+
+/*  */
+
+main {
+  max-width: 600px;
+  margin: auto;
 }
 
 /* Profile Card */
 
 .profile-card {
-    position: relative;
+	position: relative;
 }
 
 .profile-card > img {
-    width: 100%;
-    border-radius: 0.625em;
+	width: 100%;
+	border-radius: 0.625em;
 }
 
 .dog-profile-info {
-    position: absolute;
-    bottom: 0.5em;
-    left: 0.5em;
+	position: absolute;
+	bottom: 0.5em;
+	left: 0.5em;
 }
 
 .dog-profile-info > * {
-    margin: 0 0 0.4em;
+	margin: 0 0 0.4em;
 }
 
 .dog-profile-info > h2 {
-    color: #F8F8F8;
-    font-size: 1.6rem;
+	color: #f8f8f8;
+	font-size: 1.6rem;
 }
 
 .dog-profile-info > p {
-    color: #B7B7B7;
-    font-size: 1.3rem;
+	color: #b7b7b7;
+	font-size: 1.3rem;
 }
 
 .badge {
-    position: absolute;
-    top: 2.5em;
-    left: 0.4em;
-    transform: rotate(-45deg);
+	position: absolute;
+	top: 2.5em;
+	left: 0.4em;
+	transform: rotate(-45deg);
 }
 
 .badge > img {
-    max-width: 150px;
+	max-width: 150px;
 }
 
 /* action Buttons */
 
 .action-btns {
-    padding: 0.45em 0 0.6em;
-    justify-content: center;
-    gap: 1.5em;
-    background: linear-gradient(180deg, #FFFFFF 0%, #F6F7FB 100%);
+	padding: 0.45em 0 0.6em;
+	justify-content: center;
+	gap: 1.5em;
+	background: linear-gradient(180deg, #ffffff 0%, #f6f7fb 100%);
 }
 
 .action-btn {
-    padding: 0.85em 1em;
-    border-radius: 50%;
-    background: #FFFFFF;
-    box-shadow: 0px 10px 20px #E9E9EA;
-    cursor: pointer;
+	padding: 0.85em 1em;
+	border-radius: 50%;
+	background: #ffffff;
+	box-shadow: 0px 10px 20px #e9e9ea;
+	cursor: pointer;
 }
 
 .cross-btn:hover {
-    background: #FFE7EF;
+	background: #ffe7ef;
 }
 
 .heart-btn:hover {
-    background: #DBFFF4;
+	background: #dbfff4;
 }
 
 .action-btn > img {
-    max-height: 25px;
+	max-height: 25px;
 }
